Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,6 @@ steps:
     projectFile: '**/*.csproj'
     outputDirectory: '$(build.artifactStagingDirectory)/apk'
     configuration: 'Release'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
