--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,8 @@
 # ASP.NET
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    projects: '**/*sln'
 # Build and test ASP.NET projects.
 # Add steps that publish symbols, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
